v2 build the basic framework, package function

--- a/Windows/MainFrame.ui
+++ b/Windows/MainFrame.ui
@@ -18,7 +18,7 @@
     <normaloff>D:/同济大学-logo-2048px.ico</normaloff>D:/同济大学-logo-2048px.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="Img_show">
+   <widget class="QLabel" name="imglabel">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -166,6 +166,19 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
+   <widget class="QPushButton" name="testButton">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>500</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -173,7 +186,7 @@
      <x>0</x>
      <y>0</y>
      <width>820</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
