--- a/Windows/MainFrame.ui
+++ b/Windows/MainFrame.ui
@@ -62,7 +62,7 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="sele_path">
+   <widget class="QPushButton" name="ClsresultButton">
     <property name="geometry">
      <rect>
       <x>620</x>
@@ -114,7 +114,7 @@
      <string>是否显示：</string>
     </property>
    </widget>
-   <widget class="QRadioButton" name="radioButton">
+   <widget class="QRadioButton" name="overlayToggle">
     <property name="geometry">
      <rect>
       <x>105</x>
@@ -153,7 +153,7 @@
      <string>图片透明度：</string>
     </property>
    </widget>
-   <widget class="QSlider" name="horizontalSlider">
+   <widget class="QSlider" name="ShowSlider">
     <property name="geometry">
      <rect>
       <x>130</x>
