--- a/Windows/class_window.ui
+++ b/Windows/class_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>344</height>
+    <width>325</width>
+    <height>357</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,21 +17,21 @@
    <widget class="QLabel" name="label1">
     <property name="geometry">
      <rect>
-      <x>63</x>
+      <x>60</x>
       <y>30</y>
       <width>81</width>
       <height>18</height>
      </rect>
     </property>
     <property name="text">
-     <string>算法选择：</string>
+     <string>数据来源：</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="process">
+   <widget class="QPushButton" name="processButton">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>305</y>
+      <x>110</x>
+      <y>310</y>
       <width>99</width>
       <height>28</height>
      </rect>
@@ -40,43 +40,43 @@
      <string>开始执行</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="p1">
+   <widget class="QComboBox" name="p_type">
     <property name="geometry">
      <rect>
-      <x>165</x>
+      <x>162</x>
       <y>30</y>
-      <width>94</width>
+      <width>131</width>
       <height>24</height>
      </rect>
     </property>
+    <item>
+     <property name="text">
+      <string>JezeroCrater</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ZhuRong</string>
+     </property>
+    </item>
    </widget>
    <widget class="QLabel" name="label2">
     <property name="geometry">
      <rect>
-      <x>49</x>
+      <x>46</x>
       <y>80</y>
       <width>91</width>
       <height>18</height>
      </rect>
     </property>
     <property name="text">
-     <string>像素块大小：</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="p2">
-    <property name="geometry">
-     <rect>
-      <x>165</x>
-      <y>80</y>
-      <width>94</width>
-      <height>24</height>
-     </rect>
+     <string>超像素大小：</string>
     </property>
    </widget>
    <widget class="QLabel" name="label3">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>77</x>
       <y>130</y>
       <width>71</width>
       <height>20</height>
@@ -86,20 +86,10 @@
      <string>紧凑性：</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="p3">
-    <property name="geometry">
-     <rect>
-      <x>165</x>
-      <y>130</y>
-      <width>94</width>
-      <height>24</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label4">
     <property name="geometry">
      <rect>
-      <x>34</x>
+      <x>31</x>
       <y>180</y>
       <width>101</width>
       <height>20</height>
@@ -109,20 +99,10 @@
      <string>制图窗口大小：</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="p4">
-    <property name="geometry">
-     <rect>
-      <x>165</x>
-      <y>180</y>
-      <width>94</width>
-      <height>24</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label5">
     <property name="geometry">
      <rect>
-      <x>63</x>
+      <x>60</x>
       <y>230</y>
       <width>71</width>
       <height>20</height>
@@ -132,20 +112,20 @@
      <string>保存路径：</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="p_sp">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>47</x>
       <y>260</y>
-      <width>171</width>
+      <width>211</width>
       <height>24</height>
      </rect>
     </property>
    </widget>
-   <widget class="QToolButton" name="toolButton">
+   <widget class="QToolButton" name="saveButton">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>264</x>
       <y>260</y>
       <width>31</width>
       <height>24</height>
@@ -153,6 +133,45 @@
     </property>
     <property name="text">
      <string>...</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="p_super">
+    <property name="geometry">
+     <rect>
+      <x>162</x>
+      <y>80</y>
+      <width>131</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>65</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="p_m">
+    <property name="geometry">
+     <rect>
+      <x>162</x>
+      <y>130</y>
+      <width>131</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0.2</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="p_winsize">
+    <property name="geometry">
+     <rect>
+      <x>162</x>
+      <y>180</y>
+      <width>131</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>200</string>
     </property>
    </widget>
   </widget>
